<resources>
    <string name="app_name">Sealed Train</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">Welcome to Sealed Train.\nPlease log in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username_label">Username</string>
    <string name="password_label">Password</string>
    <string name="login">Login</string>
    <string name="list_label">List of your tickets</string>
    <string name="qr_label">Ticket</string>
    <string name ="tickets">Your Tickets:</string>
    <string name="ticket_date">First usage: %1$s</string>
    <string name ="route">Route: %1$s - %2$s</string>
    <string name="validation">Validation:</string>
    <string name="type">Type:</string>
    <string name="id">ID:</string>
    <string name="qr_code_of_your_ticket">Qr Code of your ticket</string>
</resources>