<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/loginFragment">
    <fragment
        android:id="@+id/loginFragment"
        android:name="com.example.secure_unico.LoginFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_loginFragment_to_listFragment"
            app:destination="@id/listFragment" />
    </fragment>
    <fragment
        android:id="@+id/listFragment"
        android:name="com.example.secure_unico.ListFragment"
        android:label="@string/list_label"
        tools:layout="@layout/fragment_list">
        <action
            android:id="@+id/action_listFragment_to_qrcodeFragment"
            app:destination="@id/qrcodeFragment" />
    </fragment>
    <fragment
        android:id="@+id/qrcodeFragment"
        android:name="com.example.secure_unico.QrcodeFragment"
        android:label="@string/qr_label"
        tools:layout="@layout/fragment_qrcode" />
</navigation>