<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
<variable
    name="viewModel"
    type="com.example.secure_unico.model.UserViewModel" />
    </data>


<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">
       <androidx.cardview.widget.CardView
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:layout_margin="15dp"
           app:cardElevation="8dp"
           app:cardCornerRadius="8dp">
           <androidx.constraintlayout.widget.ConstraintLayout
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               tools:context=".QrcodeFragment">

           <com.google.android.material.textview.MaterialTextView
               android:id="@+id/ticket_id_title"
               android:text="@string/id"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintTop_toTopOf="parent"
               android:layout_margin="20dp"
               android:textColor="?attr/colorPrimary"
               tools:text="ID:"
               />

               <com.google.android.material.textview.MaterialTextView
                   android:id="@+id/ticket_id"
                   android:text="@{viewModel.ticket.id}"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_margin="10dp"
                   android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
                   app:layout_constraintStart_toEndOf="@id/ticket_id_title"
                   app:layout_constraintTop_toTopOf="@id/ticket_id_title"
                   app:layout_constraintBottom_toBottomOf="@id/ticket_id_title"
                   tools:text = "123356789"/>


               <com.google.android.material.textview.MaterialTextView
                   android:id="@+id/type_title"
                   android:layout_width="wrap_content"
                   android:text="@string/type"
                   android:layout_height="wrap_content"
                   android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
                   app:layout_constraintStart_toStartOf="@id/ticket_id_title"
                   app:layout_constraintTop_toBottomOf="@id/ticket_id_title"
                   android:layout_marginTop="10dp"
                   android:textColor="?attr/colorPrimary"
                   tools:text="Type:"
                   />


               <com.google.android.material.textview.MaterialTextView
                   android:id="@+id/type"
                   android:text="@{viewModel.ticket.getTicketType()}"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_margin="10dp"
                   android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
                   app:layout_constraintStart_toEndOf="@id/type_title"
                   app:layout_constraintTop_toTopOf="@id/type_title"
                   app:layout_constraintBottom_toBottomOf="@id/type_title"
                   tools:text = "Full Year"/>

               <com.google.android.material.textview.MaterialTextView
                   android:id="@+id/validation_title"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/validation"
                   android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
                   app:layout_constraintStart_toStartOf="@id/ticket_id_title"
                   app:layout_constraintTop_toBottomOf="@id/type_title"
                   android:textColor="?attr/colorPrimary"
                   android:layout_marginTop="10dp" />

               <com.google.android.material.textview.MaterialTextView
                   android:id="@+id/validation"
                   android:text="@{viewModel.ticket.getValidation()}"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginStart="10dp"
                   android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
                   app:layout_constraintStart_toEndOf="@id/validation_title"
                   app:layout_constraintTop_toTopOf="@id/validation_title"

                   tools:text="2022-11-25 12:23:56"/>

               <com.google.android.material.textview.MaterialTextView
                   android:id="@+id/route"
                   android:text="@{viewModel.ticket.getRoute()}"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   app:layout_constraintTop_toBottomOf="@id/validation_title"
                   app:layout_constraintStart_toStartOf="parent"
                   app:layout_constraintEnd_toEndOf="parent"
                   android:layout_margin="90dp"
                   android:textColor="?attr/colorSecondary"
                   android:textAppearance="@style/TextAppearance.Material3.HeadlineLarge"
                   tools:text="Giugliano - Napoli"/>

               <androidx.cardview.widget.CardView
                   android:layout_width="320dp"
                   android:layout_height="320dp"
                   app:cardCornerRadius="4dp"
                   android:elevation="8dp"
                   app:layout_constraintStart_toStartOf="parent"
                   app:layout_constraintEnd_toEndOf="parent"
                   app:layout_constraintTop_toBottomOf="@id/route"
                   app:layout_constraintBottom_toBottomOf="parent">
               <ImageView
                   android:id="@+id/qrcode_image"
                   android:layout_height="match_parent"
                   android:layout_width="match_parent"
                   tools:src="@drawable/membership_icon"/>
               </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
       </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>


</layout>